--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ button[type="submit3"] {
   color: #1d915c;
 }
 
-.input-box{
+.input-box {
   width: 100%;
   height: 35px;
   padding: 6px 10px;
@@ -183,6 +183,8 @@ button[type="submit3"] {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  flex: 1;
 }
 .label_container {
   display: flex;
@@ -284,15 +286,15 @@ button[type="submit3"] {
   margin-top: 40px;
   padding: 0px 20px;
 }
-.main-container{
+.main-container {
   display: flex;
   justify-content: center;
 }
-.inner-container{
+.inner-container {
   width: 300px;
 }
 @media only screen and (max-width: 600px) {
-  .inner-container{
+  .inner-container {
     width: 100%;
   }
 }
@@ -463,7 +465,15 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   max-height: 500px;
   width: 100%;
   height: 100%;
-  margin: 80px 0px;
+  /* margin: 20px 0px; */
+  margin-bottom: 40px;
+}
+.label_container {
+  max-width: 570px;
+  max-height: 113px;
+  width: 100%;
+  height: 100%;
+  /* margin: 80px 0px; */
 }
 
 .first_wrapper {
@@ -1687,14 +1697,14 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   display: flex;
   align-items: center;
 }
-.searchBoxLoad{
+.searchBoxLoad {
   position: absolute;
   right: 15px;
 }
-.searchBoxLoad{
+.searchBoxLoad {
   display: none;
 }
-.pac-loader{
+.pac-loader {
   position: fixed;
   top: 0;
   left: 0;
@@ -1707,6 +1717,6 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   z-index: 100000;
   display: none;
 }
-.pac-img{
+.pac-img {
   width: 100px;
 }
