--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,13 @@ select,
 a :focus {
   outline: none !important;
 }
-/* .iframe-container {
+.iframe-container {
   position: relative;
   width: 100%;
   padding-bottom: 56.25%;
   height: 0;
+  top: -100px;
+  margin: 20px 0px;
 }
 .iframe-container iframe {
   position: absolute;
@@ -61,7 +63,7 @@ a :focus {
   left: 0;
   width: 100%;
   height: 100%;
-} */
+}
 
 .nav_section {
   /* height: 91px; */
@@ -186,10 +188,10 @@ button[type="submit3"] {
   align-items: center;
   flex: 1;
 }
-.label_container {
+/* .label_container {
   display: flex;
   flex-direction: column;
-}
+} */
 .first_row {
   margin-bottom: 20px;
 }
@@ -441,7 +443,7 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   color: #72686f;
 }
 .mobileno {
-  height: 200px;
+  height: 70px;
   font-size: 16px;
 }
 
@@ -466,7 +468,7 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   width: 100%;
   height: 100%;
   /* margin: 20px 0px; */
-  margin-bottom: 40px;
+  margin: 40px 0px;
 }
 .label_container {
   max-width: 570px;
@@ -1124,12 +1126,18 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   }
   .container_info {
     display: flex;
+    flex: 1;
     flex-direction: column-reverse;
-    /* justify-content: space-between; */
+    justify-content: space-between;
+    /* align-items: center; */
+    width: 100%;
+    height: 100%;
   }
   .label_container {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
+    margin-top: 30px;
+    padding-left: 10px;
   }
   .first_row {
     display: flex;
@@ -1334,7 +1342,19 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   .svg_container {
     margin-top: 30px;
     padding-left: 10px;
-    margin: 0px 0px;
+    width: 100%;
+    height: 100%;
+    /* margin: 0px 0px; */
+  }
+
+  .label_container {
+    margin-top: 30px;
+    padding-left: 10px;
+    width: 100%;
+    height: 100%;
+    max-width: 570px;
+    max-height: 113px;
+    /* margin: 0px 0px; */
   }
   .nav_section_inner {
     padding: 20px 3%;
@@ -1538,12 +1558,16 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   .container_info {
     display: flex;
     flex-direction: column-reverse;
+    justify-content: space-between;
+    flex: 1;
+    width: 100%;
+    height: 100%;
     /* justify-content: space-between; */
   }
-  .label_container {
+  /* .label_container {
     display: flex;
     flex-direction: column;
-  }
+  } */
   .first_row {
     display: flex;
     flex-direction: row;
