--- a/css/style.css
+++ b/css/style.css
@@ -424,10 +424,10 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   text-transform: capitalize;
   color: #72686f;
 }
-.mobileno {
+/* .mobileno {
   height: 200px;
   font-size: 16px;
-}
+} */
 
 #mobileButton,
 #startNetworking {
