--- a/css/style.css
+++ b/css/style.css
@@ -303,6 +303,98 @@ button[type="submit3"] {
 .inner-container {
   width: 300px;
 }
+
+/* bubble */
+.bubble_Container1,
+.bubble_Container2 {
+  display: flex;
+  align-items: center;
+}
+
+.bubble_max {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bubble1,
+.bubble2,
+.bubble3,
+.bubble4 {
+  width: 100%;
+  height: 100%;
+  max-width: 370.89px;
+  max-height: 392.52px;
+}
+.bubble1_container,
+.bubble3_container,
+.bubble2_container,
+.bubble4_container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.container_heading {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 30px;
+  color: #ffffff;
+  margin-bottom: 20px;
+  text-align: center;
+  position: absolute;
+  top: 20%;
+  left: 37%;
+  transform: translate(-20%, -37%);
+}
+.container_subheading {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #ffffff;
+  margin-bottom: 10px;
+  text-align: center;
+  position: absolute;
+  top: 35%;
+  left: 35%;
+  transform: translate(-35%, -35%);
+}
+/* .container_heading_row2 {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 30px;
+  color: #ffffff;
+  margin-bottom: 20px;
+  text-align: center;
+  position: absolute;
+  top: 20%;
+  left: 37%;
+  transform: translate(-20%, -37%);
+} */
+.Grow_network {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-70%, -50%);
+}
+.networth {
+  position: absolute;
+  top: 70%;
+  left: 70%;
+  transform: translate(-70%, -70%);
+}
+.growth {
+  position: absolute;
+  top: 90%;
+  left: 70%;
+  transform: translate(-90%, -70%);
+}
+.ask_corner {
+  position: absolute;
+  top: 77%;
+  left: 60%;
+  transform: translate(-77%, -60%);
+}
+
 @media only screen and (max-width: 600px) {
   .inner-container {
     width: 100%;
@@ -485,6 +577,7 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   max-height: 113px;
   width: 100%;
   height: 100%;
+  padding: 0px 20px;
   /* margin: 80px 0px; */
 }
 
@@ -493,7 +586,7 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 50px 10%;
+  margin: 70px 10%;
 }
 
 .reward_wrapper {
@@ -518,6 +611,12 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   justify-content: space-around;
   align-items: center;
   /* margin-bottom: 50px; */
+}
+.bubble_max {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .summary_heading {
@@ -612,95 +711,6 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   display: inline-block;
 } */
 
-.bubble_Container1,
-.bubble_Container2 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.bubble_Container1 {
-  margin-bottom: -30%;
-}
-.bubble1_container,
-.bubble3_container {
-  margin-right: 5%;
-}
-.bubble1,
-.bubble2,
-.bubble3,
-.bubble4 {
-  width: 100%;
-  height: 100%;
-  max-width: 1000px;
-  max-height: 700px;
-}
-.bubble1_container,
-.bubble3_container,
-.bubble2_container,
-.bubble4_container {
-  /* max-width: 700px;
-  max-height: 500px; */
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-.bubble1_container,
-.bubble2_container {
-  top: -400px;
-}
-.bubble3_container,
-.bubble4_container {
-  bottom: -400px;
-}
-.container_heading {
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 30px;
-  color: #ffffff;
-  margin-bottom: 20px;
-  text-align: center;
-  position: absolute;
-  top: 20%;
-  left: 37%;
-  transform: translate(-20%, -37%);
-}
-.container_subheading {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 18px;
-  color: #ffffff;
-  margin-bottom: 10px;
-  text-align: center;
-  position: absolute;
-  top: 35%;
-  left: 35%;
-  transform: translate(-35%, -35%);
-}
-.Grow_network {
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-70%, -50%);
-}
-.networth {
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-70%, -50%);
-}
-.growth {
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-70%, -50%);
-}
-.ask_corner {
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-70%, -50%);
-}
 /* .four_container {
   padding: 20px 90px;
   background-color: #ecf0f3;
@@ -864,11 +874,11 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
 }
 .top_wave_container,
 .working_steps {
-  padding: 20px 3%;
+  padding: 20px 30px;
   display: flex;
   flex-direction: row;
   /* justify-content: flex-start; */
-  align-items: center;
+  /* align-items: center; */
 }
 .working_steps_container {
   margin: 20px 0px;
@@ -1003,7 +1013,15 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   .nav_section_inner {
     padding: 20px 15%;
   }
-  .container_heading {
+  /* .bubble1_container,
+  .bubble3_container {
+    margin-top: 200px;
+  }
+  .bubble2_container,
+  .bubble4_container {
+    margin-bottom: 200px;
+  } */
+  /* .container_heading {
     position: absolute;
     top: 20%;
     left: 35%;
@@ -1014,13 +1032,16 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
     top: 35%;
     left: 35%;
     transform: translate(-35%, -35%);
-  }
+  } */
   .working_step {
     margin-left: 10px;
   }
   .working_heading {
     margin-left: 40px;
   }
+  /* .bubble_Container {
+    margin: 0px 20%;
+  } */
 }
 
 @media screen and (max-width: 880px) {
@@ -1040,7 +1061,8 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
     margin-top: -200px;
   }
 }
-@media screen and (max-width: 1110px) {
+/* @media screen and (max-width: 1110px) { */
+@media screen and (max-width: 800px) {
   .first_wrapper {
     display: flex;
     flex-direction: column;
@@ -1121,25 +1143,7 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
     justify-content: space-between;
     align-items: center;
   } */
-  .bubble_Container1 {
-    margin-bottom: -12%;
-  }
-  .bubble1_container,
-  .bubble3_container {
-    margin-right: 2%;
-  }
-  .wave_container {
-    width: 100%;
-    /* height: 100%; */
-  }
-  .bubble1_container,
-  .bubble2_container {
-    top: -90px;
-  }
-  .bubble3_container,
-  .bubble4_container {
-    bottom: -90px;
-  }
+
   .container_info {
     display: flex;
     flex: 1;
@@ -1153,7 +1157,7 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
     /* display: flex;
     flex-direction: column; */
     margin-top: 30px;
-    padding-left: 10px;
+    padding-left: 20px;
   }
   .first_row {
     display: flex;
@@ -1179,44 +1183,11 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
     margin-left: 20px;
   }
 }
-@media screen and (max-width: 1367px) and (min-width: 1110px) {
-  .bubble_Container1 {
-    margin-bottom: -12%;
-  }
-  .bubble1_container,
-  .bubble3_container {
-    margin-right: 2%;
-  }
-  .wave_container {
-    width: 100%;
-    /* height: 100%; */
-  }
-  .bubble1_container,
-  .bubble2_container {
-    /* top: -90px; */
-    top: -190px;
-  }
-  .bubble3_container,
-  .bubble4_container {
-    /* bottom: -90px; */
-    bottom: -190px;
-  }
+/* @media screen and (max-width: 1367px) and (min-width: 1110px) {
 }
 
 @media screen and (max-width: 2344px) and (min-width: 1778px) {
-  .container_heading {
-    position: absolute;
-    top: 20%;
-    left: 37%;
-    transform: translate(-20%, -37%);
-  }
-  .container_subheading {
-    position: absolute;
-    top: 35%;
-    left: 40%;
-    transform: translate(-35%, -40%);
-  }
-}
+} */
 
 @media screen and (max-width: 1744px) and (min-width: 1367px) {
   .middle_container {
@@ -1232,67 +1203,9 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
     width: 100%;
     height: 100%;
   }
-  .bubble_Container1 {
-    margin-bottom: -45%;
-  }
-  .container_heading {
-    position: absolute;
-    top: 20%;
-    left: 37%;
-    transform: translate(-20%, -37%);
-  }
-  .container_subheading {
-    position: absolute;
-    top: 35%;
-    left: 44%;
-    transform: translate(-35%, -44%);
-  }
 }
 
 @media screen and (min-width: 480px) and (max-width: 900px) {
-  .bubble_Container1,
-  .bubble_Container2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .bubble_Container1 {
-    margin-bottom: -20%;
-  }
-  .bubble1_container,
-  .bubble3_container {
-    margin-right: 0%;
-  }
-  .wave_container {
-    width: 100%;
-  }
-  .bubble1_container,
-  .bubble2_container {
-    top: -90px;
-  }
-  .bubble3_container,
-  .bubble4_container {
-    bottom: -90px;
-  }
-  .Grow_network {
-    position: absolute;
-    top: 70%;
-    left: 52%;
-    transform: translate(-70%, -52%);
-  }
-  .networth {
-    position: absolute;
-    top: 70%;
-    left: 60%;
-    transform: translate(-70%, -60%);
-  }
-  .growth {
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-70%, -50%);
-  }
   .reward_wrapper {
     flex: 1;
     display: flex;
@@ -1312,18 +1225,6 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
   .summary_heading {
     text-align: center;
     margin-bottom: 40px;
-  }
-  .container_heading {
-    position: absolute;
-    top: 20%;
-    left: 42%;
-    transform: translate(-20%, -42%);
-  }
-  .container_subheading {
-    position: absolute;
-    top: 35%;
-    left: 42%;
-    transform: translate(-35%, -42%);
   }
 }
 @media screen and (max-width: 480px) {
@@ -1464,67 +1365,11 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
     text-align: center;
     margin: 50px 0px;
   }
-  .bubble_Container1,
-  .bubble_Container2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .bubble_Container1 {
-    margin-bottom: -27%;
-  }
-  .bubble1_container,
-  .bubble3_container {
-    margin-right: 0%;
-  }
+
   .wave_container {
     width: 100%;
   }
-  .bubble1_container,
-  .bubble2_container {
-    top: -90px;
-  }
-  .bubble3_container,
-  .bubble4_container {
-    bottom: -90px;
-  }
-  .container_heading {
-    position: absolute;
-    top: 20%;
-    left: 39%;
-    transform: translate(-20%, -39%);
-  }
-  .container_subheading {
-    position: absolute;
-    top: 35%;
-    left: 40%;
-    transform: translate(-35%, -40%);
-  }
-  .Grow_network {
-    position: absolute;
-    top: 70%;
-    left: 55%;
-    transform: translate(-70%, -55%);
-  }
-  .networth {
-    position: absolute;
-    top: 80%;
-    left: 73%;
-    transform: translate(-80%, -73%);
-  }
-  .ask_corner {
-    position: absolute;
-    top: 74%;
-    left: 60%;
-    transform: translate(-74%, -60%);
-  }
-  .growth {
-    position: absolute;
-    top: 81%;
-    left: 55%;
-    transform: translate(-81%, -55%);
-  }
+
   .top_wave_container {
     display: flex;
     flex-direction: column-reverse;
@@ -1648,6 +1493,16 @@ input[type="text"] .mobileno::-webkit-input-placeholder {
     font-weight: bold;
     font-size: 18px;
     line-height: 27px;
+  }
+  .bubble_Container {
+    margin: 0px 1%;
+  }
+
+  .bubble_Container1,
+  .bubble_Container2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 .input-main {
